Try fixing code block clipping issues

--- a/page/main.scss
+++ b/page/main.scss
@@ -538,6 +538,7 @@ pre {
     line-height: 1.2;
     text-align: left;
     overflow-x: auto;
+    padding: 2px;
 }
 
 nav#hyperjump {
